<resources>
    <string name="app_name">Ingenieria Huemul</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="identificador" />
    <string name="name" />
    <string name="email" />
    <string name="log_out">Log Out</string>
    <string name="revoke">Revoke</string>
    <string name="not_close_session">No puede cerrar sesion</string>
    <string name="not_revoke">No se pudo revocar el acceso</string>
    <string name="not_log_in">No se pudo iniciar sesión.</string>
    <string name="not_firebase_auth">No se pudo autenticar con firebase</string>
    <string name="signOut">Sign Out</string>
    <string name="title_login">FLAMENCO</string>
    <string name="subtitle_login">Un solución elegante\na un problema complejo</string>
    <string name="msj_boton_qr">Login QR</string>
</resources>
