<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/photoImageView"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="8dp"
            app:srcCompat="@color/colorAccent" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textViewIdentificador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/identificador"
            android:textSize="14sp"/>

        <GridView
            android:id="@+id/gridViewRegistros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="3"/>

    </LinearLayout>
    <Button
        android:text="@string/log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:onClick="logOut"/>


    <Button
        android:text="@string/revoke"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:onClick="revoke"/>

</LinearLayout>
